<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">



    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="400dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"

        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/rectangle">
        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:id="@+id/rl11"
            android:background="#e59400"
            >

        <com.LAW.lift.model.MyTextviews
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView10"
            android:id="@+id/textView10"
            android:textSize="25sp"
            android:textColor="#fff"
            android:layout_centerInParent="true"

            />
            </RelativeLayout>
        </RelativeLayout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/rl4"
        android:id="@+id/scrollView"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">




    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/contactrectangle_box"



       >

<com.LAW.lift.model.MyTextviews
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textView2"
    android:textColor="#1c1c1c"
    android:textSize="17sp"
    android:textAlignment="gravity"
    android:id="@+id/textView2" />

<com.LAW.lift.model.MyTextviews
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textView3"
    android:layout_marginTop="3dp"

    android:textColor="#1c1c1c"
    android:textSize="17sp"
    android:textAlignment="gravity"
    android:layout_below="@+id/textView2"
    android:id="@+id/textView3" />

<com.LAW.lift.model.MyTextviews
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textView4"
    android:textColor="#1c1c1c"
    android:textSize="17sp"
    android:textAlignment="gravity"
    android:lineSpacingExtra="4dp"


    android:layout_marginTop="3dp"

    android:layout_below="@+id/textView3"
    android:id="@+id/textView4" />

<com.LAW.lift.model.MyTextviews
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textView5"
    android:layout_marginTop="3dp"
    android:textColor="#1c1c1c"
    android:textSize="17sp"
    android:textAlignment="gravity"
    android:lineSpacingExtra="4dp"


    android:layout_below="@+id/textView4"
    android:id="@+id/textView5" />

<com.LAW.lift.model.MyTextviews
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textView6"
    android:layout_marginTop="3dp"
    android:textColor="#1c1c1c"
    android:textSize="17sp"
    android:textAlignment="gravity"
    android:lineSpacingExtra="4dp"


    android:layout_below="@+id/textView5"
    android:id="@+id/textView6" />

<com.LAW.lift.model.MyTextviews
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#1c1c1c"
    android:textSize="17sp"
    android:textAlignment="gravity"
    android:lineSpacingExtra="4dp"


    android:text="@string/textView7"
    android:layout_marginTop="3dp"
    android:id="@+id/textView7"

    android:layout_below="@+id/textView6"/>

<com.LAW.lift.model.MyTextviews
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textView8"
    android:textColor="#1c1c1c"
    android:textSize="17sp"
    android:textAlignment="gravity"
    android:lineSpacingExtra="4dp"
    android:layout_marginTop="3dp"

    android:id="@+id/textView8"

    android:layout_below="@+id/textView7"/>
    <com.LAW.lift.model.MyTextviews
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1c1c1c"
        android:textSize="17sp"
        android:textAlignment="gravity"
        android:lineSpacingExtra="4dp"
        android:layout_marginTop="3dp"

        android:text="@string/textView9"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"/>



    </RelativeLayout>
    </ScrollView>
</RelativeLayout>




