<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#fff">


    <com.LAW.lift.model.MyTextviews
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#4c4c4c"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="130dp"
        android:id="@+id/mon" />

    <com.LAW.lift.model.ButtonText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/string_central"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:id="@+id/central"
        android:background="#e59400"
        android:layout_below="@+id/mon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <com.LAW.lift.model.ButtonText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/string_tamil"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:id="@+id/Tamil"
        android:background="#e59400"
        android:layout_below="@+id/central"
        android:layout_centerHorizontal="true" />

    <com.LAW.lift.model.ButtonText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/string_supreme"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="#55a555"
        android:layout_marginTop="15dp"
        android:id="@+id/supreme"
        android:layout_below="@+id/Tamil"
        android:layout_centerHorizontal="true" />

    <com.LAW.lift.model.ButtonText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/string_madras"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="#55a555"
        android:layout_marginTop="15dp"
        android:id="@+id/Madras"
        android:layout_below="@+id/supreme"
        android:layout_centerHorizontal="true" />

    <com.LAW.lift.model.ButtonText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/string_forum"
        android:textColor="#fff"
        android:textSize="20sp"
        android:id="@+id/forum"
        android:background="#5f7fd4"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/Madras"
        android:layout_centerHorizontal="true" />

</RelativeLayout>