<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">


    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="400dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"
        android:background="#e59400">
    <com.LAW.lift.model.MyTextviews
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView13"
        android:textColor="#fff"
        android:textSize="25sp"
        android:id="@+id/textView13"
        android:layout_centerInParent="true" />
        </RelativeLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/rl2">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >




    <com.LAW.lift.model.MyTextviews
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView11"
        android:layout_gravity="center_vertical|right"
        android:layout_marginLeft="10dp"
        android:textColor="#1c1c1c"
        android:lineSpacingExtra="4dp"
        android:textSize="18sp"
        android:layout_marginRight="10dp"
        android:id="@+id/textView11"/>


    <com.LAW.lift.model.MyTextviews
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView12"
        android:textColor="#1c1c1c"
        android:layout_gravity="center_vertical|right"
        android:textSize="18sp"
        android:lineSpacingExtra="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="1dp"
        android:paddingRight="12dp"
        android:layout_below="@+id/textView11"
        android:id="@+id/textView12" />



</RelativeLayout>

    </ScrollView>


</RelativeLayout>