<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rectangle_box"
            android:layout_below="@+id/text1"
            android:layout_marginTop="1dp">

            <com.LAW.lift.model.MyTextviews
                android:id="@+id/titletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supreme_title"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:textColor="#800000"
                android:textSize="20sp" />
            <com.LAW.lift.model.MyTextviews
                android:id="@+id/titlepara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textAllCaps="false"
                android:layout_below="@+id/titletext"
                android:textColor="#1c1c1c"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"

                android:textAlignment="gravity"
                android:lineSpacingExtra="4dp"
                android:textSize="17sp"
                />



            <com.LAW.lift.model.MyTextviews
                android:id="@+id/textcontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supreme_context"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:textColor="#800000"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/titlepara"
                android:textSize="20sp"
               />
            <com.LAW.lift.model.MyTextviews
                android:id="@+id/contextpara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ffff"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/textcontext"
                android:textAllCaps="false"

                android:textColor="#1c1c1c"
                android:textAlignment="gravity"
                android:lineSpacingExtra="4dp"
                android:textSize="17sp"/>



            <com.LAW.lift.model.MyTextviews
                android:id="@+id/textquestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supreme_questn"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:layout_marginTop="15dp"
                android:layout_below="@id/contextpara"
                android:textColor="#800000"
                android:textSize="20sp"
              />
            <com.LAW.lift.model.MyTextviews
                android:id="@+id/questionpara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textAllCaps="false"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/textquestion"
                android:textColor="#1c1c1c"
                android:textAlignment="gravity"
                android:lineSpacingExtra="4dp"
                android:textSize="17sp"
                />


            <com.LAW.lift.model.MyTextviews
                android:id="@+id/textanswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supreme_ansr"
                android:textAllCaps="false"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
               android:layout_below="@+id/questionpara"
                android:textColor="#800000"
                android:textSize="20sp"
               />
            <com.LAW.lift.model.MyTextviews
                android:id="@+id/answerpara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textAllCaps="false"
                android:layout_below="@+id/textanswer"
                android:textColor="#1c1c1c"
                android:layout_marginTop="3dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textAlignment="gravity"
                android:lineSpacingExtra="4dp"
                android:textSize="17sp"/>


            <com.LAW.lift.model.MyTextviews
                android:id="@+id/textreference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supreme_ref"
                android:textAllCaps="false"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/answerpara"
                android:textColor="#800000"
                android:textSize="20sp"
                />
            <com.LAW.lift.model.MyTextviews
                android:id="@+id/referencepara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="gggg"
                android:textAllCaps="false"

                android:textColor="#1c1c1c"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textAlignment="gravity"
                android:lineSpacingExtra="4dp"
                android:layout_below="@+id/textreference"
                android:textSize="17sp"

                />
            <com.LAW.lift.model.MyTextviews
                android:id="@+id/textfull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supreme_text"
                android:textAllCaps="false"
                android:textColor="#800000"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/referencepara"
                android:textSize="20sp"
               />
            <com.LAW.lift.model.MyTextviews
                android:id="@+id/texttouch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texttouch"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"

                android:layout_below="@id/textfull"
                android:textAllCaps="false"
                android:textColor="#0000ff"
                android:textSize="17sp"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

